Keep Lite Page bit set

Since Lite Page fallback will not be done via the client, client Lo-Fi
should not be shown if a Lite Page was requested. Do not clear the Lite
Page bit.

BUG=719055

Review-Url: https://codereview.chromium.org/2856223008
Cr-Commit-Position: refs/heads/master@{#470090}

Former-commit-id: c487f12607e6cde6cbe17854013e355a18e71b5d